配置完相关 GUI 界面

--- a/src/surfacemeshprocessing.qrc
+++ b/src/surfacemeshprocessing.qrc
@@ -29,5 +29,6 @@
       <file>Images/topology-edgeFlip.png</file>
       <file>Images/edit-redo.png</file>
       <file>Images/edit-undo.png</file>
+      <file>Images/meshsimply.png</file>
     </qresource>
 </RCC>
